packages/gcn_spirv/src/snapshots/exec__deps__lib_sce_gnm_driver__translate__tests__compute_shader_1.snap
---
source: packages/exec/src/deps/lib_sce_gnm_driver/translate/mod.rs
expression: shader.displayed()
---
0x0000: s_mov_b32 vcc_hi, 0xb
0x0008: s_lshl_b32 s0, s16, 6
0x000c: v_add_co_u32 v0, s0, v0
0x0010: s_buffer_load_dwordx2 s[0:1], s[12:15], 0x0
0x0014: s_waitcnt 0x7f
0x0018: v_cmp_gt_u32 s0, v0
0x001c: s_and_saveexec_b64 s[2:3], vcc
0x0020: v_and_b32 v1, s1, v0
0x0024: s_cbranch_execz 0x7
0x0028: buffer_load_format_x v1, v1, s[4:7], idxen, offset=0x0, soffset=0x80
0x0030: v_cmp_gt_u32 s10, v0
0x0034: s_and_saveexec_b64 s[0:1], vcc
0x0038: s_waitcnt 0xf70
0x003c: buffer_store_format_x v1, v0, s[8:11], idxen, offset=0x0, soffset=0x80
0x0044: s_endpgm 0x0
