packages/gcn_spirv/src/snapshots/exec__deps__lib_sce_gnm_driver__translate__tests__control_flow_blocks.snap
---
source: packages/exec/src/deps/lib_sce_gnm_driver/translate/mod.rs
expression: graph
---
[
    ControlFlowBlock {
        start_instruction_idx: 0,
        end_instruction_idx: 8,
        last_instruction_branch: true,
    },
    ControlFlowBlock {
        start_instruction_idx: 9,
        end_instruction_idx: 13,
        last_instruction_branch: false,
    },
    ControlFlowBlock {
        start_instruction_idx: 14,
        end_instruction_idx: 14,
        last_instruction_branch: true,
    },
]
