packages/gcn_spirv/src/snapshots/exec__deps__lib_sce_gnm_driver__translate__tests__shader.snap
---
source: packages/exec/src/deps/lib_sce_gnm_driver/translate/mod.rs
expression: shader.displayed()
---
0x0000: s_mov_b32 vcc_hi, 0x7
0x0008: v_and_b32 v1, 1, v0
0x000c: v_lshlrev_b32 v1, 1, v1
0x0010: v_and_b32 v0, -2, v0
0x0014: v_add_co_u32 v1, -1, v1
0x0018: v_add_co_u32 v0, -1, v0
0x001c: v_cvt_f32_i32 v1, v1
0x0020: v_cvt_f32_i32 v0, v0
0x0024: v_mov_b32 v2, 0
0x0028: v_mov_b32 v3, 1.f
0x002c: exp pos0, v1, v0, v2, v3, done
0x0034: exp param0, v3, v3, v3, v3
0x003c: s_endpgm 0x0
